--- a/beta/framer/style.css
+++ b/beta/framer/style.css
@@ -1,14 +1,17 @@
+@import url('https://fonts.googleapis.com/css?family=Raleway:400,500,700,800,900');
+
 * {
 	margin: 0;
 	padding: 0;
 	border: none;
 	-webkit-user-select: none;
 	-webkit-tap-highlight-color: rgba(0,0,0,0);
+	font-family: 'Raleway', sans-serif;
 }
 
 body {
 	background-color: #fff;
-	font: 28px/1em "Helvetica";
+	font-family: 'Raleway', sans-serif;
 	color: gray;
 	overflow: hidden;
 }
