--- a/style/style.css
+++ b/style/style.css
@@ -1,14 +1,14 @@
 @import url("https://fonts.googleapis.com/css?family=Passion One|Lato");
 @import url('https://fonts.googleapis.com/css?family=Gochi+Hand');
 /*!
- * Default theme for Pingendo 
- * Homepage: http://pingendo.com  
- * Copyright 2015 Pingendo 
- * Licensed under MIT 
+ * Default theme for Pingendo
+ * Homepage: http://pingendo.com
+ * Copyright 2015 Pingendo
+ * Licensed under MIT
  * Based on Bootstrap v3.3.4
 */
-/* Add custom CSS classes here 
- * 
+/* Add custom CSS classes here
+ *
  * img {
  *   box-shadow : 0px 0px 10px black !important;
  * }
@@ -19,12 +19,16 @@ html {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
 }
+.imageContain {
+  background-size: cover;
+  background-repeat: no-repeat;
+}
 body {
   margin: 0;
     background-color: black;
 }
 .col-2{
-    
+
     font-family: 'Gochi Hand', cursive;
 }
 article,
@@ -1934,7 +1938,7 @@ pre code {
   }
 }
 @media (max-width: 993px) {
-    
+
     .col-2 {
     width: 50%;
     float: left;
@@ -2981,7 +2985,7 @@ select[multiple].form-group-lg .form-control {
 }
 @media (min-width: 768px) {
 
-    
+
   .form-horizontal .control-label {
     text-align: right;
     margin-bottom: 0;
@@ -6537,7 +6541,7 @@ button.close {
 
   .fa-fw{
 	   font-size: 50%;
-  width: 0.6em; 
+  width: 0.6em;
 	  }
 	  body{
 		  font-size:125%;
@@ -6556,7 +6560,7 @@ button.close {
 
   .fa-fw{
 	   font-size: 50%;
-  width: 0.6em; 
+  width: 0.6em;
 	  }
 	  body{
 		  font-size:100%;
