--- a/style/sweetalert2.css
+++ b/style/sweetalert2.css
@@ -20,7 +20,7 @@
   margin-top: -250px;
   overflow: hidden;
   display: none;
-  z-index: 2000; 
+  z-index: 2000;
   max-height: 400px;
   overflow-y: auto;
   }
@@ -571,3 +571,8 @@
   100% {
     -webkit-transform: rotate(360deg);
             transform: rotate(360deg); } }
+
+.imageContain {
+  background-size: cover !important;
+  background-repeat: no-repeat !important;
+}
