--- a/style/style.css
+++ b/style/style.css
@@ -32,23 +32,11 @@ button {
 }
 button:hover{
 	background-color: #4CAF50;
-	color: white;
+	color: #ffffff;
 	text-decoration: none;
 }
-a:link {
-	color: white;
-	text-decoration: none;
-}
-a:visited {
-	color: white;
-	text-decoration: none;
-}
-a:hover {
-	color: aliceblue;
-	text-decoration: none;
-}
-a:active {
-	color: white;
+a:link, a:visited, a:hover, a:active {
+	color: #ffffff;
 	text-decoration: none;
 }
 .imageContain {
